--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "James Blair",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
+    "fs": "^0.0.1-security",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
